--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -224,33 +224,100 @@
             <a href="#" class="fancy-btn">СМОТРЕТЬ ВСЕ</a>
         </div>
     </div>
-    <!--<div class="background-image-block">
-        <div class="overlay-block"></div>
-        <div class="container">
-            <h3><span class="underline--magical">У ЛИЦА ТАК МНОГО ГРАНЕЙ</span></h3>
-            <p><span class="underline--magical"><b>Салон красоты Лица</b></span> находится в самом центре города в двух
-                шагах от Сенной площади по адресу Спасский пер. 3. Это настоящая фабрика красоты, трудно найти услугу,
-                которой здесь не оказывают: для клиентов имеется парикмахерский зал, студия ногтевого сервиса,
-                богатейшие косметические программы, татуаж, солярий, СПА, отбеливание зубов и многое другое.</p>
-            <p>В <span class="underline--magical"><b>парикмахерском зале</b></span> выполняют стрижки, укладки, делают
-                прически и окрашивание в полном соответствии с модными и современными тенденциями, проводят выпрямление
-                и лечение волос, создают великолепные завивки.</p>
-            <p><span class="underline--magical"><b>Ногтевой сервис</b></span> предлагает маникюр и педикюр в
-                классическом, европейском, аппаратном исполнении, наращивание и укрепление ногтей, спа-процедуры для рук
-                и ног, декоративные покрытия с применением средств OPI, CND, Shellac.</p>
-            <p><span class="underline--magical"><b>Косметический кабинет</b></span> предоставляет огромное количество
-                услуг по уходу за лицом и телом. Здесь есть процедуры аппаратной косметологии, обертывания, пилинги и
-                уходы, инъекционная мезотерапия, биоэпиляция, несколько видов массажа. Здесь же оказывают услуги по
-                визажу, оформляют брови и ресницы, делают татуаж, пирсинг, есть процедура косметического отбеливания
-                зубов.</p>
-            <p><span class="underline--magical"><b>Солярий</b></span> поможет создать летнее настроение, придать коже
-                красивый отдохнувший загорелый вид даже среди глубокой зимы, или промозглой осенью.</p>
-            <div class="button-center">
-                <a href="#" class="fancy-btn">ПОДРОБНЕЕ</a>
+    <div class="container">
+        <div class="title-page">
+            <h2>У ВАС ЕСТЬ 10 ПРИЧИН, ЧТОБЫ ПОЗНАКОМИТЬСЯ С НАМИ</h2>
+        </div>
+        <div class="reason-block">
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Удобное расположение
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-diamond" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Стильная и уютная атмосфера
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-ambulance" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Медицинская лицензия
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Квалифицированные специалисты
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-magic" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Контроль за дезинфекцией и стерилизацией инструментов
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-check-circle" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Косметика премиум класса
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-certificate" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Сертифицированное оборудование
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-id-card-o" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Индивидуальный подход и история посещений
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Эксклюзивные услуги
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-smile-o" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Предложение месяца
+                </div>
+            </div>
+            <div class="reason-item">
+                <div class="reason-icon">
+                    <i class="fa fa-certificate" aria-hidden="true"></i>
+                </div>
+                <div class="reason-text">
+                    Сертифицированное оборудование
+                </div>
             </div>
         </div>
-    </div>-->
-    <div class="container">
         <div class="title-page">
             <h2>НАШИ МАСТЕРА</h2>
         </div>
