--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -160,7 +160,7 @@
                     <a href="#"><img src="images/good1.jpg" alt=""></a>
                 </div>
                 <div class="good-main-link">
-                    <a href="#">МУЖСКИЕ СТРИЖКИ</a>
+                    <a href="#">МУЖСКОЙ ПАРИКМАХЕРСКИЙ ЗАЛ</a>
                 </div>
             </div>
             <div class="goods-block-item">
@@ -168,15 +168,15 @@
                     <a href="#"><img src="images/good2.jpg" alt=""></a>
                 </div>
                 <div class="good-main-link">
-                    <a href="#">ЖЕНСКИЕ СТРИЖКИ</a>
+                    <a href="#">ЖЕНСКИЙ ПАРИКМАХЕРСКИЙ ЗАЛ</a>
                 </div>
             </div>
             <div class="goods-block-item">
                 <div class="goods-main-img">
-                    <a href="#"><img src="images/good3.jpg" alt=""></a>
+                    <a href="#"><img src="images/good9.jpg" alt=""></a>
                 </div>
                 <div class="good-main-link">
-                    <a href="#">МАКИЯЖ</a>
+                    <a href="#">ТАТУАЖ</a>
                 </div>
             </div>
             <div class="goods-block-item">
@@ -184,9 +184,10 @@
                     <a href="#"><img src="images/good4.jpg" alt=""></a>
                 </div>
                 <div class="good-main-link">
-                    <a href="#">МАНИКЮР</a>
+                    <a href="#">НОГТЕВОЙ СЕРВИС</a>
                 </div>
             </div>
+
             <div class="goods-block-item">
                 <div class="goods-main-img">
                     <a href="#"><img src="images/good5.jpg" alt=""></a>
@@ -197,10 +198,26 @@
             </div>
             <div class="goods-block-item">
                 <div class="goods-main-img">
-                    <a href="#"><img src="images/good6.jpg" alt=""></a>
+                    <a href="#"><img src="images/good10.jpg" alt=""></a>
                 </div>
                 <div class="good-main-link">
-                    <a href="#">ДЕПИЛЯЦИЯ</a>
+                    <a href="#">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a>
+                </div>
+            </div>
+            <div class="goods-block-item">
+                <div class="goods-main-img">
+                    <a href="#"><img src="images/good11.jpg" alt=""></a>
+                </div>
+                <div class="good-main-link">
+                    <a href="#">АППАРАТНАЯ КОСМЕТОЛОГИЯ</a>
+                </div>
+            </div>
+            <div class="goods-block-item">
+                <div class="goods-main-img">
+                    <a href="#"><img src="images/good12.jpg" alt=""></a>
+                </div>
+                <div class="good-main-link">
+                    <a href="#">МУЖСКАЯ КОСМЕТОЛОГИЯ</a>
                 </div>
             </div>
             <div class="goods-block-item">
@@ -211,12 +228,30 @@
                     <a href="#">МАССАЖ</a>
                 </div>
             </div>
+
+            <div class="goods-block-item">
+                <div class="goods-main-img">
+                    <a href="#"><img src="images/good13.jpg" alt=""></a>
+                </div>
+                <div class="good-main-link">
+                    <a href="#">НАРАЩИВАНИЕ РЕСНИЦ</a>
+                </div>
+            </div>
+            <div class="goods-block-item">
+                <div class="goods-main-img">
+                    <a href="#"><img src="images/good3.jpg" alt=""></a>
+                </div>
+                <div class="good-main-link">
+                    <a href="#">МАКИЯЖ</a>
+                </div>
+            </div>
+
             <div class="goods-block-item">
                 <div class="goods-main-img">
                     <a href="#"><img src="images/good8.jpg" alt=""></a>
                 </div>
                 <div class="good-main-link">
-                    <a href="#">СОЛЯРИЙ</a>
+                    <a href="#">VIP УСЛУГИ</a>
                 </div>
             </div>
         </div>
