--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -481,27 +481,27 @@
         </div>
         <div class="gallery-grid">
             <figure class="gallery__item gallery__item--1">
-                <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt=""
+                <a href="images/111111.jpg" data-fancybox="gallery"><img src="images/111111.jpg" alt=""
                         class="gallery__img"></a>
             </figure>
             <figure class="gallery__item gallery__item--2">
-                <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt=""
+                <a href="images/222222.jpg" data-fancybox="gallery"><img src="images/222222.jpg" alt=""
                         class="gallery__img"></a>
             </figure>
             <figure class="gallery__item gallery__item--3">
-                <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt=""
+                <a href="images/3333333.jpg" data-fancybox="gallery"><img src="images/3333333.jpg" alt=""
                         class="gallery__img"></a>
             </figure>
             <figure class="gallery__item gallery__item--4">
-                <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt=""
+                <a href="images/555555.jpg" data-fancybox="gallery"><img src="images/555555.jpg" alt=""
                         class="gallery__img"></a>
             </figure>
             <figure class="gallery__item gallery__item--5">
-                <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt=""
+                <a href="images/4444444.jpg" data-fancybox="gallery"><img src="images/4444444.jpg" alt=""
                         class="gallery__img"></a>
             </figure>
             <figure class="gallery__item gallery__item--6">
-                <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt=""
+                <a href="images/6666666.jpg" data-fancybox="gallery"><img src="images/6666666.jpg" alt=""
                         class="gallery__img"></a>
             </figure>
         </div>
