--- a/index.html
+++ b/index.html
@@ -68,10 +68,16 @@
                     <span class="pages__href">online.html</span>
                 </a>
             </li>
-            <li class="pages__item pages__item_red">
+            <li class="pages__item pages__item_orange">
                 <a href="masters.html" target="_blank">
                     <span class="pages__name">Мастера</span>
                     <span class="pages__href">masters.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="master.html" target="_blank">
+                    <span class="pages__name">Мастер</span>
+                    <span class="pages__href">master.html</span>
                 </a>
             </li>
         </ul>
